fix: fixed height on featuredBlogPosts cards on tablet

--- a/src/components/shared/sections/featuredBlogPosts/card.module.css
+++ b/src/components/shared/sections/featuredBlogPosts/card.module.css
@@ -28,6 +28,12 @@
   color: var(--mainBlue);
 }
 
+@media only screen and (max-width: 1200px) {
+  .container {
+    min-height: 230px;
+  }
+}
+
 @media only screen and (max-width: 767px) {
   .container {
     min-height: 120px;
